src-errormsg/E07-WrongField/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E07-WrongField/Plinth.hs:31:32: error: [GHC-83865]
    • Couldn't match expected type ‘Withdraw’
                  with actual type ‘Integer’
    • In the first argument of ‘netWithdraw’, namely ‘n’
      In the first argument of ‘(-)’, namely ‘netWithdraw n’
      In the expression: netWithdraw n - from
   |
31 |   Deduct n from -> netWithdraw n - from
   |                                ^

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E07-WrongField/Plinth.hs:31:36: error: [GHC-83865]
    • Couldn't match expected type ‘Integer’
                  with actual type ‘Withdraw’
    • In the second argument of ‘(-)’, namely ‘from’
      In the expression: netWithdraw n - from
      In a case alternative: Deduct n from -> netWithdraw n - from
   |
31 |   Deduct n from -> netWithdraw n - from
   |                                    ^^^^
